--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,11 @@
     <title>Jellyfish</title>
   </head>
   <body>
-    <div id="info">Press an Add button to add a jellyfish!<br>Orbit the camera to follow them and take a closer look.</div>
-    <button style="top:0" id="add" class="ui">Add</button>
+    <div class="container">
+      <div id="info">Press Z or Add button to add a jellyfish!<br>Orbit the camera to follow them and take a closer look.</div>
+      <div id="bttn"><button style="top:0" id="add" class="ui">Add</button></div>
+    </div>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script id="vertexShader" type="x-shader/x-vertex">
